<resources>
    <string name="app_name">VerySimpleProject</string>
    <string name="publisher_hint">Bạn là</string>
    <string name="content_hint">Bạn thuộc lớp nào</string>
    <string name="detail_hint">Bạn muốn gửi nội dung gì</string>
    <string name="target_hint">Bạn muốn gửi cho ai</string>
    <string name="khoa_ky_thuat_desc">Khoa kỹ thuật</string>
    <string name="khoa_kinh_te_desc">Khoa kinh tế</string>
    <string name="khoa_su_pham_desc">Khoa sư phạm</string>
    <string name="thoikhoabieu_radiobutton">Thời khoá biểu</string>
    <string name="thong_bao_radiobutton">Thông báo</string>
    <string name="push_button">Save</string>
    <string name="user_name">User</string>
    <string name="class_user">Lớp K12TT</string>
    <string name="thong_bao">Mai khoa kỹ thuật sẽ được nghỉ hè</string>
    <string name="done">Done</string>
    <string name="reminder">Reminder</string>
    <string name="login">Login</string>
    <string name="password_hint">Pasword</string>
    <string name="delete">Clean</string>
    <string name="logout_button">Logout</string>
    <string name="userNameText">User name: %1$s</string>
    <string name="passwordText">Password: %1$s</string>
    <string name="WelcomeText">Bài tập lập trình di động</string>
    <string name="lets_start_txt">Let’s Get Started</string>
    <string name="admin_tools_txt">Admin tools</string>
    <string name="delete_user">Delete</string>
    <string-array name="ThangTrongNam">
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>

</resources>